--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="description" content="Canta los números de la Lota de forma dígital.">
+    <meta name="keywords" content="Lota, Lotería, Bingo, Lotto, Vuejs">
+    <meta name="author" content="Eric Birkner">
   </head>
   <body>
     <noscript>
